--- a/templates/drawer.html
+++ b/templates/drawer.html
@@ -4,7 +4,9 @@
             <!-- language selector -->
             <pb-lang name="lang" data-template="pages:languages"/>
             <pb-collapse>
-                <h3 slot="collapse-trigger"><pb-i18n key="menu.documentation">Documentation</pb-i18n></h3>
+                <h3 slot="collapse-trigger">
+                    <pb-i18n key="menu.documentation">Documentation</pb-i18n>
+                </h3>
                 <paper-listbox slot="collapse-content">
                     <paper-item>
                         <a href="${app}/doc/documentation.xml?odd=docbook.odd" data-template="pages:parse-params">
@@ -15,7 +17,9 @@
                         <a href="https://faq.teipublisher.com/">FAQ</a>
                     </paper-item>
                     <paper-item>
-                        <a href="https://www.e-editiones.org/tags/release" target="_blank"><pb-i18n key="menu.news">News</pb-i18n></a>
+                        <a href="https://www.e-editiones.org/tags/release" target="_blank">
+                            <pb-i18n key="menu.news">News</pb-i18n>
+                        </a>
                     </paper-item>
                     <paper-item>
                         <a href="https://cdn.tei-publisher.com/api.html" target="_blank">Webcomponents API</a>
@@ -23,7 +27,9 @@
                 </paper-listbox>
             </pb-collapse>
             <pb-collapse>
-                <h3 slot="collapse-trigger"><pb-i18n key="menu.download.title">Download</pb-i18n></h3>
+                <h3 slot="collapse-trigger">
+                    <pb-i18n key="menu.download.title">Download</pb-i18n>
+                </h3>
                 <paper-listbox slot="collapse-content">
                     <paper-item>
                         <pb-download type="tex" src="document1" dialog="downloadDialog" data-i18n="[title]menu.download.pdf-latex" title="i18n(pdf-latex)">
@@ -59,7 +65,9 @@
             </pb-collapse>
             <pb-restricted login="login">
                 <pb-collapse>
-                    <h3 slot="collapse-trigger"><pb-i18n key="menu.admin.title">Admin</pb-i18n></h3>
+                    <h3 slot="collapse-trigger">
+                        <pb-i18n key="menu.admin.title">Admin</pb-i18n>
+                    </h3>
                     <paper-listbox slot="collapse-content">
                         <paper-item>
                             <pb-download data-template="pages:edit-odd-link" src="document1">
@@ -76,10 +84,20 @@
             </pb-restricted>
         </pb-media-query>
         <div class="settings">
-            <h3><pb-i18n key="document.settings">Settings</pb-i18n></h3>
-            <pb-toggle-feature emit="transcription" subscribe="transcription" name="view" on="page" off="div" init-from-view="init-from-view"><pb-i18n key="document.view-type">Page View</pb-i18n></pb-toggle-feature>
+            <h3>
+                <pb-i18n key="document.settings">Settings</pb-i18n>
+            </h3>
+             <pb-select-feature id="select-view1" global="global" subscribe="transcription" emit="transcription" name="view1" label="View" items="[         {&#34;name&#34;: &#34;Diplomatic View&#34;, &#34;properties&#34;: {&#34;mode&#34;: &#34;diplomatic&#34;, &#34;view&#34;: &#34;page&#34;}},         {&#34;name&#34;: &#34;Normalized View&#34;, &#34;properties&#34;: {&#34;mode&#34;: &#34;norm&#34;, &#34;view&#34;: &#34;single&#34;, &#34;root&#34;: null}}         ]"/>
+             <pb-toggle-feature emit="transcription" subscribe="transcription" name="faksimile" selector="pb-facsimile,pb-facs-link">
+                <pb-i18n key="myapp.facsimile">Faksimile</pb-i18n>
+                </pb-toggle-feature>
+            <!-- <pb-toggle-feature emit="transcription" subscribe="transcription" name="view" on="page" off="div" init-from-view="init-from-view">
+                <pb-i18n key="document.view-type">Page View</pb-i18n> 
+            </pb-toggle-feature>-->
             <pb-edit-xml src="document1">
-                <paper-button alt="Edit source"><iron-icon icon="icons:code"/> <pb-i18n key="menu.download.view-tei"/></paper-button>
+                <paper-button alt="Edit source">
+                    <iron-icon icon="icons:code"/> <pb-i18n key="menu.download.view-tei"/>
+                </paper-button>
             </pb-edit-xml>
         </div>
     </div>
