adaptions for GM ED

--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -4,9 +4,9 @@ div#content {
     margin-top: 200px;
     position: fixed;
 }
-
-/* Due to a safari issue, relative paths to background images won't work as variables, so we list them here */
-
+.edRefLB {
+    display: none;
+}
 .logo {
     background-image: url("../images/tei-publisher-logo-contrast-color.svg");
 }
