--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -1,8 +1,8 @@
 @import url("../fonts/font.css");
 
 div#content {
-    margin-top: 200px;
-    position: fixed;
+  /*  margin-top: 200px;
+    position: fixed;*/
 }
 .edRefLB {
     display: none;
