--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -94,13 +94,32 @@
                     </pb-view>
                 </section>
                 <main class="content-body">
-               
+               <pb-grid-action action="add" class="grid-add" grid="#grid" initial="1">
+                    <paper-button>
+                        <iron-icon icon="icons:add"/> Add Column
+                    </paper-button>
+                </pb-grid-action>
                  <!-- <header class="timeline-nav">
                             <pb-timeline url="api/genesis" scopes="['D']" auto="auto" emit="timeline" data-template="pages:parse-params"/>
                         </header> -->
-                             
-                                <pb-view no-scroll="true" id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
-                                </pb-view>
+                        <pb-grid id="grid" panels="[0,1]" subscribe="transcription" animation="true">
+                            <template>
+                                <!-- template used for adding a new column: user can choose between translation, facsimile and notes -->
+                                <pb-panel emit="transcription">
+                                <!-- Added to the toolbar -->
+                                    <pb-grid-action grid="#grid" slot="toolbar" action="remove">
+                                        <paper-icon-button icon="icons:close"/>
+                                    </pb-grid-action>
+                                        <template title="Transcription">
+                                            <pb-view no-scroll="true" id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
+                                            </pb-view>
+                                        </template>
+                                        <template title="Marginalien">
+                                             <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-diffs" subscribe="transcription">
+                                                <pb-param name="view" value="normalized"/>
+                                            </pb-view>
+                                        </template>
+                               
                                  
                               <!--
                              <pb-facsimile id="facsimile" default-zoom-level="0.7" show-full-page-control="true" show-home-control="true" emit="transcription" subscribe="transcription" type="iiif" show-navigation-control="show-navigation-control" show-navigator="show-navigator">
@@ -110,9 +129,10 @@
                                     <pb-param name="view" value="normalized"/>
                                     </pb-view>
                                -->
-                               <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-diffs" subscribe="transcription">
-                                    <pb-param name="view" value="normalized"/>
-                                    </pb-view>
+                           
+                            </pb-panel>
+                        </template> 
+                    </pb-grid>
                 </main>
             </app-header-layout>
         </app-drawer-layout>
