--- a/resources/odd/surface.css
+++ b/resources/odd/surface.css
@@ -8,7 +8,7 @@
    #input { position: fixed; left: 70%;}
    form { margin-top: 2px;}
    #message { color: red;}
-   .transkriptionField {background-color: #CED5CE; padding-right: 20px; padding-left: 5px; padding-top: 10px; padding-bottom: 10px;margin-left: 30px; width: max-content;}
+   .transkriptionField {background-color: #CED5CE; padding-right: 20px; padding-left: 5px; padding-top: 10px; padding-bottom: 10px;margin-top: 3em; margin-left: 30px; width: max-content;}
    .highlight, .metamark:hover { background-color: var(--highlight); }
    .metamark { cursor: pointer;}
    .small { color: black; padding: 3px; }
@@ -46,7 +46,7 @@
     }
    .EOL { color: red;}
    .XXX_red, .N_red { color: #dc4731;}
-   .N-Archiv_red { color: #b8390e;font-face: bold;}
+   .N-Archiv_red { color: #b8390e;font-weight: bold;}
    .N_pencil { color: gray; font-weight: bold;}
    .N_brown1, .N_brown { color: var(--nbrown);}
    .red-marking:before { 
