--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -16,6 +16,18 @@
     <script src="resources/scripts/debug.js"/>
     <script type="module" src="pb-components-bundle.js" data-template="pages:load-components"/>
     <style>
+        @font-face {
+                font-family: "MyFont";
+                src: url("https://fonts.cdnfonts.com/s/15884/SourceSerifPro-Light.woff");
+        }
+      
+        @font-face {
+                font-family: "MyLatin";
+                src: url("https://fonts.cdnfonts.com/s/12183/SourceSansPro-Light.woff");}
+        .latin {
+            font-family: MyLatin;    
+        }
+        
     
         pb-page[unresolved] {
             display: none;
@@ -24,6 +36,16 @@
             --pb-view-height: calc(100vh - 200px);
             --pb-grid-column-gap: 2em;
             --pb-facsimile-height: calc(var(--pb-view-height) - 22px);
+         --highlight: yellow;
+         --pb-content-font-family: MyFont;
+         --pb-content-font-size: 16px;
+         --radius: 1em 1em;
+         --red-marking: red;
+         --length: 0.2em;
+         --nbrown: #5C4033;
+         --red: #dc3545;
+          --nblack2: #46494c;
+        --typesetter_black: #373a3d;
         }
 
         #view1 {
@@ -98,35 +120,13 @@
                 </section>
                 <main class="content-body">
               
-                        <pb-grid id="grid" panels="[0,1]" subscribe="transcription" animation="true">
-                            <template>
-                                <!-- template used for adding a new column: user can choose between translation, facsimile and notes -->
-                                <pb-panel emit="transcription">
-                                <!-- Added to the toolbar -->
-                                    <pb-grid-action grid="#grid" slot="toolbar" action="remove" emit="transcription" subscribe="transcription">
-                                        <paper-icon-button icon="icons:close"/>
-                                    </pb-grid-action>
-                                        <template title="Transkription">
-                                            <pb-view id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
-                                            </pb-view>
-                                        </template>
-                                         <template title="Faksimile">
-                                            <pb-facsimile id="facsimile" default-zoom-level="0.7" show-full-page-control="true" show-home-control="true" emit="transcription" subscribe="transcription" type="iiif" show-navigation-control="show-navigation-control" show-navigator="show-navigator">
-                                            </pb-facsimile>
-                                        </template>
-                                        <template title="Marginalien">
-                                             <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-diffs" subscribe="transcription">
-                                                <pb-param name="view" value="normalized"/>
-                                            </pb-view>
-                                        </template>
-                                    </pb-panel>
-                                </template> 
-                            </pb-grid>
-                            <pb-grid-action action="add" class="grid-add" grid="#grid" initial="1" emit="transcription" subscribe="transcription">
-                                <paper-button>
-                                    <iron-icon icon="icons:add"/> Add Column
-                                </paper-button>
-                        </pb-grid-action>
+              
+                         <pb-view id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
+                            </pb-view>     
+                   
+                          <!--  <pb-facsimile id="facsimile" default-zoom-level="0.7" show-full-page-control="true" show-home-control="true" emit="transcription" subscribe="transcription" type="iiif" show-navigation-control="show-navigation-control" show-navigator="show-navigator">
+                                            </pb-facsimile> -->
+                        
                 </main>
             </app-header-layout>
         </app-drawer-layout>
