--- a/templates/pages/test.html
+++ b/templates/pages/test.html
@@ -25,8 +25,7 @@
         }
 
         #view1 {
-            flex: 1 1;
-            display: flex;
+          
             justify-content: center;
         }
 
@@ -44,27 +43,29 @@
         
          pb-page[unresolved] pb-facsimile {
             display: none;
-        }
+        } 
 
         .content-body pb-facsimile {
-            flex: 1 1;
+           flex: 1 1;
           // --pb-facsimile-height: calc(var(--pb-view-height) - 22px);
            
         }
         
-        pb-facsimile.toggle {
-            display: none;
-        }
-        
-        pb-facs-link.toggle {
-            display: none;
-        }
+      
+       .test {
+           width: content-width;
+           height: 100%;
+           resize: both;
+           background: grey;
+       }
+       
 
         @media (max-width: 769px) {
             pb-facsimile {
                 display: none;
             }
-        }
+        } 
+        
     </style>
 </head>
 
@@ -93,19 +94,39 @@
                         <pb-param name="header" value="short"/>
                     </pb-view>
                 </section>
-                <main class="content-body">
+                  <main class="content-body">
               
-                 
-                         <pb-view no-scroll="true" id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
-                            </pb-view>      
-                               
-                                 
-                              
-                             <pb-facsimile id="facsimile" default-zoom-level="0.7" show-full-page-control="true" show-home-control="true" emit="transcription" subscribe="transcription" type="iiif" show-navigation-control="show-navigation-control" show-navigator="show-navigator">
-                            </pb-facsimile>
-                         
-                                 
+                        <pb-grid id="grid" panels="[0,1]" subscribe="transcription" animation="true">
+                            <template>
+                                <!-- template used for adding a new column: user can choose between translation, facsimile and notes -->
+                                <pb-panel emit="transcription">
+                                <!-- Added to the toolbar -->
+                                    <pb-grid-action grid="#grid" slot="toolbar" action="remove" emit="transcription" subscribe="transcription">
+                                        <paper-icon-button icon="icons:close"/>
+                                    </pb-grid-action>
+                                        <template title="Transkription">
+                                            <pb-view id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
+                                            </pb-view>
+                                        </template>
+                                         <template title="Faksimile">
+                                            <pb-facsimile id="facsimile" default-zoom-level="0.7" show-full-page-control="true" show-home-control="true" emit="transcription" subscribe="transcription" type="iiif" show-navigation-control="show-navigation-control" show-navigator="show-navigator">
+                                            </pb-facsimile>
+                                        </template>
+                                        <template title="Marginalien">
+                                             <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-diffs" subscribe="transcription">
+                                                <pb-param name="view" value="normalized"/>
+                                            </pb-view>
+                                        </template>
+                                    </pb-panel>
+                                </template> 
+                            </pb-grid>
+                            <pb-grid-action action="add" class="grid-add" grid="#grid" initial="1" emit="transcription" subscribe="transcription">
+                                <paper-button>
+                                    <iron-icon icon="icons:add"/> Add Column
+                                </paper-button>
+                        </pb-grid-action>
                 </main>
+               
             </app-header-layout>
         </app-drawer-layout>
     </pb-page>
