--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -123,7 +123,9 @@
               
                          <pb-view id="view1" src="document1" column-separator=".tei-cb" view="surface" subscribe="transcription" emit="transcription">
                             </pb-view>     
-                   
+                    <pb-view src="document1" column-separator=".tei-cb" map="nietzsche-notes" subscribe="transcription">
+                                                <pb-param name="view" value="normalized"/>
+                                            </pb-view>
                           <!--  <pb-facsimile id="facsimile" default-zoom-level="0.7" show-full-page-control="true" show-home-control="true" emit="transcription" subscribe="transcription" type="iiif" show-navigation-control="show-navigation-control" show-navigator="show-navigator">
                                             </pb-facsimile> -->
                         
