--- a/templates/drawer.html
+++ b/templates/drawer.html
@@ -83,7 +83,7 @@
                 </pb-collapse>
             </pb-restricted>
         </pb-media-query>
-        <div class="settings">
+        <div class="settings" data-template="pages:adapt-settings">
             <h3>
                 <pb-i18n key="document.settings">Settings</pb-i18n>
             </h3>
