--- a/resources/odd/surface.css
+++ b/resources/odd/surface.css
@@ -6,8 +6,14 @@ body {
          --nbrown: #5C4033;
          --red: #dc3545;
 }
-.note {
+.noteDiv {
+    position: fixed;
+}
+.note, .editor {
     font-style: italic;
+}
+.editor {
+    margin-right: 0.3em;
 }
 .note .term {
     font-style: normal;
@@ -138,6 +144,14 @@ body {
         border-top-left-radius: var(--radius);
         border-color: inherit;/* inherit color from text */
      }
+    pb-popover .afterWordinsertion-above:before, 
+    pb-popover .beforePunctuationinsertion-above:before, 
+    pb-popover .inWordinsertion-above:before, 
+    pb-popover .inSpatiuminsertion-above:before, 
+    pb-popover .insMinsertion-above:before, 
+    pb-popover .Ezinsertion-above:before {
+        border: 0;
+    }
     .inSpatiuminsertion-above:before { left: -3.5px; }
     .afterWordinsertion-above:before { left: 1px;   }
     .inWordinsertion-above:before { left: -0.5px; }
